# xwmfs

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL  INSTALL.md  Makefile.am  NEWS  README  README.md  configure.ac
docs/: Makefile.am  doxygen.conf  xwmfs.1  xwmfs.asciidoc
docs/dev/: wmfs.mm
examples/: print_window_tree.py  sync_window_name_to_desktop.py
scripts/: make_release
src/: Makefile.am
src/common/: Condition.hxx  Exception.cxx  Exception.hxx  Helper.cxx  Helper.hxx  ILogger.cxx  ILogger.hxx  IThreadEntry.hxx  Mutex.cxx  Mutex.hxx  RWLock.hxx  SystemException.hxx  Thread.cxx  Thread.hxx  strerror.cxx  types.hxx
src/fuse/: AbortHandler.cxx  AbortHandler.hxx  DirEntry.cxx  DirEntry.hxx  Entry.cxx  Entry.hxx  EventFile.cxx  EventFile.hxx  FileEntry.cxx  FileEntry.hxx  OpenContext.hxx  RootEntry.cxx  RootEntry.hxx  SymlinkEntry.cxx  SymlinkEntry.hxx  xwmfs_fuse.cxx  xwmfs_fuse.hxx  xwmfs_fuse_ops.c  xwmfs_fuse_ops.h  xwmfs_fuse_ops_impl.cxx
src/main/: DesktopDirEntry.cxx  DesktopDirEntry.hxx  DesktopsRootDir.cxx  DesktopsRootDir.hxx  Exception.hxx  Options.hxx  SelectionAccessFile.cxx  SelectionAccessFile.hxx  SelectionDirEntry.cxx  SelectionDirEntry.hxx  SelectionOwnerFile.cxx  SelectionOwnerFile.hxx  StdLogger.cxx  StdLogger.hxx  UpdatableDir.cxx  UpdatableDir.hxx  UpdateableDir.cxx  UpdateableDir.hxx  WinManagerDirEntry.cxx  WinManagerDirEntry.hxx  WinManagerFileEntry.cxx  WinManagerFileEntry.hxx  WindowDirEntry.cxx  WindowDirEntry.hxx  WindowFileEntry.cxx  WindowFileEntry.hxx  WindowsRootDir.cxx  WindowsRootDir.hxx  Xwmfs.cxx  Xwmfs.hxx  logger.cxx  logger.hxx  main.cxx  main.hxx  terminate.cxx
src/x11/: Property.hxx  PropertyTraits.cxx  PropertyTraits.hxx  RootWin.cxx  RootWin.hxx  WinManagerWindow.cxx  WinManagerWindow.hxx  X11Exception.hxx  XAtom.cxx  XAtom.hxx  XDisplay.cxx  XDisplay.hxx  XWindow.cxx  XWindow.hxx  XWindowAttrs.cxx  XWindowAttrs.hxx  property.cxx  property.hxx  utf8_string.hxx
tests/: Makefile.am  test_events.py  test_name_update.py
tests/base/: base.py
xwmfs/trunk/: ChangeLog  INSTALL  Makefile.am  README  bootstrap
xwmfs/trunk/docs/: doxygen.conf
xwmfs/trunk/src/: Makefile.am
xwmfs/trunk/src/common/: Condition.hxx  Exception.cxx  Exception.hxx  Helper.hxx  ILogger.cxx  ILogger.hxx  IThreadEntry.hxx  Mutex.hxx  RWLock.hxx  SystemException.hxx  Thread.hxx
xwmfs/trunk/src/fuse/: xwmfs_fuse.cxx  xwmfs_fuse.hxx  xwmfs_fuse_ops.h  xwmfs_fuse_ops_impl.cxx
xwmfs/trunk/src/main/: Options.hxx  StdLogger.cxx  WinManagerDirEntry.cxx  WinManagerFileEntry.cxx  WindowDirEntry.cxx  WindowDirEntry.hxx  WindowFileEntry.cxx  WindowFileEntry.hxx  Xwmfs.cxx  Xwmfs.hxx  main.cxx  terminate.cxx
xwmfs/trunk/src/x11/: RootWin.cxx  RootWin.hxx  X11Exception.hxx  XAtom.cxx  XDisplay.hxx  XWindow.cxx  XWindow.hxx  property.cxx  property.hxx
